--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,15 +7,33 @@ html
 
     title= title
   
+    // bootstrap css
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7', crossorigin='anonymous')
-    link(rel='stylesheet', href='https://api.tiles.mapbox.com/mapbox.js/v2.2.3/mapbox.css')
     link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.3/css/bootstrap-select.min.css')
+
+    // mapbox css
+    link(rel='stylesheet', href='https://api.tiles.mapbox.com/mapbox.js/v2.2.3/mapbox.css')
+    link(rel='stylesheet', href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css')
+    link(rel='stylesheet', href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css')
+
+    // fonts
+    link(rel='stylesheet', href='http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css')
+
+    // app css
     link(rel='stylesheet', href='/stylesheets/style.css')
 
-    script(src='https://code.jquery.com/jquery-2.1.4.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', integrity='sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS', crossorigin='anonymous')
-    script(src='https://api.tiles.mapbox.com/mapbox.js/v2.2.3/mapbox.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.3/js/bootstrap-select.min.js')
-    script(src='/javascripts/bundle.js')
   body
     block content
+
+    script(src='https://code.jquery.com/jquery-2.1.4.min.js')
+
+    // bootstrap js
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', integrity='sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS', crossorigin='anonymous')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.9.3/js/bootstrap-select.min.js')   
+
+    // mapbox js
+    script(src='https://api.tiles.mapbox.com/mapbox.js/v2.2.3/mapbox.js')
+    script(src='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js')
+
+    // app js
+    script(src='/javascripts/bundle.js')
