--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -107,3 +107,54 @@ body {
 .leaflet-popup-content p {
   margin-bottom: 2px;
 }
+
+@media screen and (min-width: 300px) and (max-width: 765px) {
+  .sidebar {
+    height: 40%;
+    margin-top: 50px;
+  }
+  .sidebar {
+    display: none;
+  }
+  /*
+  .sidebar .heading {
+    display: none;
+  }
+  .list {
+    height: 85%;
+  }
+  */
+  .leaflet-top {
+    top: 85%;
+  }
+  .col-xs-12 {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 765px) {
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-offset-3 {
+    margin-left: 25%;
+  }
+}
+
+/*
+@media screen and (min-width: 1000px) {
+  .sidebar {
+    height: 100%;
+    margin-top: 0;
+  }
+  .sidebar .heading {
+    display: none;
+  }
+  .list {
+    height: 85%;
+  }
+}
+*/
