--- a/views/index.jade
+++ b/views/index.jade
@@ -3,11 +3,11 @@ extends layout
 block content
   .container-fluid
     section.row
-      .sidebar.col-md-3
+      .sidebar.col-md-3.col-xs-12
         .heading
           h3 DoctorWho
         .list
-      .topbar.col-md-offset-3.col-md-4
+      .topbar.col-md-offset-3.col-md-6.col-xs-12
         form
           .input-group
             .input-group-btn
